--- a/composer.json
+++ b/composer.json
@@ -1,32 +1,22 @@
 {
     "name": "laravel/laravel",
     "type": "project",
-    "description": "Livewire starter kit for Lunar e-commerce.",
-    "keywords": [
-        "lunar",
-        "ecommerce",
-        "e-commerce",
-        "livewire",
-        "laravel"
-    ],
+    "description": "The skeleton application for the Laravel framework.",
+    "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
-        "http-interop/http-factory-guzzle": "^1.2",
-        "laravel/framework": "^v10.43",
+        "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8",
-        "league/flysystem-aws-s3-v3": "^3.0",
-        "meilisearch/meilisearch-php": "^1.6",
-        "predis/predis": "^2.2"
+        "laravel/tinker": "^2.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.3",
+        "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
         "spatie/laravel-ignition": "^2.0"
     },
@@ -58,9 +48,6 @@
         ]
     },
     "extra": {
-        "branch-alias": {
-            "dev-master": "10.x-dev"
-        },
         "laravel": {
             "dont-discover": []
         }
@@ -70,6 +57,7 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
+            "pestphp/pest-plugin": true,
             "php-http/discovery": true
         }
     },
